--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,4 +3,7 @@
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+     stdlib: "puppetlabs/stdlib"
+     docker: "puppetlabs/docker"
+     yumrepo: "puppetlabs/yumrepo_core"
+     dockerapp: "ffquintella/dockerapp"
