--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,5 +5,6 @@ fixtures:
   forge_modules:
      stdlib: "puppetlabs/stdlib"
      docker: "puppetlabs/docker"
+     concat: "puppetlabs/concat"
      yumrepo: "puppetlabs/yumrepo_core"
      dockerapp: "ffquintella/dockerapp"
